Notes no longer overlapping footer

--- a/app/resources/styles/sass/app.scss
+++ b/app/resources/styles/sass/app.scss
@@ -240,6 +240,9 @@ main footer {
 .note-body {
   word-wrap: break-word;
 }
+.service-notes {
+  margin-bottom: 70px;
+}
 
 /*********** header **********/
 header {
